# hwp-parser

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
.claude/skills/hwp-parser/: SKILL.md
.claude/skills/hwp-parser/references/: api.md  cli.md  troubleshooting.md  workflows.md
hwpparser/: __init__.py  _logging.py  _types.py  cli.py  constants.py  converter.py  exceptions.py  reader.py  utils.py  workflows.py  writer.py
skills/: README.md
skills/chatgpt/: README.md  instructions.md  openapi.yaml
skills/claude/: CLAUDE.md  mcp-server.md
skills/gemini/: README.md  functions.json  system-prompt.md
skills/openclaw/: SKILL.md
skills/openclaw/references/: setup.md
skills/openclaw/scripts/: convert.sh
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py  test_reader.py  test_workflows.py
